--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,26 @@
   </div>
 </div>
 
-<%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
+<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
 
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+  <div class="form-group">
+    <label for="message_name" class="control-label col-sm-1">名前:</label>
+    <div class="col-sm-6">
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="message_body" class="control-label col-sm-1">内容:</label>
+    <div class="col-sm-6">
+        <%= f.text_area :body , class: "form-control" %>
+    </div>
+  </div>
+  <br>
+  <div class="form-group">
+    <div class="col-sm-offset-1 col-sm-6">
+      <%= f.submit class: "btn btn-sm btn-primary" , :rows => "5"%>
+    </div>
+  </div>
+  
 <% end %>
