--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,22 +15,22 @@
 <%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
 
   <div class="form-group">
-    <label for="message_name" class="control-label col-sm-1">名前:</label>
+    <label for="message_name" class="control-label col-sm-2">名前:</label>
     <div class="col-sm-6">
         <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
   
   <div class="form-group">
-    <label for="message_body" class="control-label col-sm-1">内容:</label>
+    <label for="message_body" class="control-label col-sm-2">内容:</label>
     <div class="col-sm-6">
-        <%= f.text_area :body , class: "form-control" %>
+        <%= f.text_area :body , class: "form-control" , :rows => "5"%>
     </div>
   </div>
   <br>
   <div class="form-group">
     <div class="col-sm-offset-1 col-sm-6">
-      <%= f.submit class: "btn btn-sm btn-primary" , :rows => "5"%>
+      <%= f.submit class: "btn btn-sm btn-primary"%>
     </div>
   </div>
   
