--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,38 +12,5 @@
   </div>
 </div>
 
-<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
- <% if @message.errors.present? %>
-  <div class="alert alert-danger">
-    <%= alert %>
-    <ul>
-      <% @message.errors.full_messages.each do |full_message|%>
-       <li>
-         <%= full_message %>
-       </li>
-      <% end %>
-    </ul>
-  </div>
- <% end %>
-
-  <div class="form-group">
-    <label for="message_name" class="control-label col-sm-2">名前:</label>
-    <div class="col-sm-6">
-        <%= f.text_field :name, class: "form-control" %>
-    </div>
-  </div>
-  
-  <div class="form-group">
-    <label for="message_body" class="control-label col-sm-2">内容:</label>
-    <div class="col-sm-6">
-        <%= f.text_area :body , class: "form-control" , :rows => "5"%>
-    </div>
-  </div>
-  <br>
-  <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-6">
-      <%= f.submit class: "btn btn-sm btn-primary"%>
-    </div>
-  </div>
-  
-<% end %>
+<% #部分テンプレートの読み込み %>
+<%= render 'form' %>
