--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,19 @@
 <body>
   <nav class="navbar">
     <div class="container">
+
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Message Board</a>
       </div>
     </div>
   </nav>
+  
   <div class="container">
+    <% if notice %>
+      <div class = "alert alert-info">
+        <%= notice %>
+      </div>
+    <% end %>
     <%= yield %>
   </div>
 </body>
