--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -20,6 +20,13 @@
   </div>
   
   <div class="form-group">
+    <label for="message_name" class="control-label col-sm-2">年齢:</label>
+    <div class="col-sm-6">
+        <%= f.number_field :age, class: "form-control" %>
+    </div>
+  </div>
+  
+  <div class="form-group">
     <label for="message_body" class="control-label col-sm-2">内容:</label>
     <div class="col-sm-6">
         <%= f.text_area :body , class: "form-control" , :rows => "5"%>
